Functionality in js added

--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,6 @@
             <button onclick="appendToDisplay('Math.log(')">log</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
