--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scientific Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
+
     <div class="calculator">
         <input type="text" id="display" readonly>
         <div class="buttons">
@@ -34,12 +36,16 @@
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
 
-            <button onclick="appendToDisplay('Math.sqrt(')">√</button>
-            <button onclick="appendToDisplay('Math.pow(')">xʸ</button>
-            <button onclick="appendToDisplay('Math.sin(')">sin</button>
-            <button onclick="appendToDisplay('Math.cos(')">cos</button>
-            <button onclick="appendToDisplay('Math.tan(')">tan</button>
-            <button onclick="appendToDisplay('Math.log(')">log</button>
+            <button onclick="appendToDisplay('(')">(</button>
+            <button onclick="appendToDisplay(')')">)</button>
+            <button onclick="appendToDisplay('√(')">√</button>
+            <button onclick="appendToDisplay('∛(')">∛</button>
+
+            <button onclick="appendToDisplay('sin(')">sin</button>
+            <button onclick="appendToDisplay('cos(')">cos</button>
+            <button onclick="appendToDisplay('tan(')">tan</button>
+            <button onclick="appendToDisplay('log(')">log</button>
+            <button onclick="appendToDisplay('^(')">xʸ</button>
         </div>
     </div>
     <script src="javascript.js"></script>
