Button ANS is added and its functionality

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scientific Calculator</title>
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
 
@@ -46,6 +45,7 @@
             <button onclick="appendToDisplay('tan(')">tan</button>
             <button onclick="appendToDisplay('log(')">log</button>
             <button onclick="appendToDisplay('^(')">xʸ</button>
+            <button onclick="appendLastAnswer()">ANS</button>
         </div>
     </div>
     <script src="javascript.js"></script>
