Heading and its style

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <!-- Heading added here -->
+    <h1>Calculator App</h1>
+
     <div class="calculator">
         <input type="text" id="display" readonly>
         <div class="buttons">
