@media added for responsiveness to all screen sizes

--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scientific Calculator</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <!-- Heading added here -->
     <h1>Calculator App</h1>
 
     <div class="calculator">
